Document again the auth
